--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.cbq.quickbot</groupId>
     <artifactId>QuickBot</artifactId>
-    <version>1.0.0-a1</version>
+    <version>1.0.0.0-alpha.2</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
